@@ -1,3 +1,8 @@
+2015-10-12  Natalia Portillo  <claunia@claunia.com>
+
+	* Partition.cs:
+	  Added standard header.
+
 2015-10-05  Natalia Portillo  <claunia@claunia.com>
 
 	* Partition.cs:
